--- a/Prueba1/IntraCampus/index.html
+++ b/Prueba1/IntraCampus/index.html
@@ -49,7 +49,7 @@
     Aenan convallis.
   </div>
   <div class="mdl-card__actions mdl-card--border">
-    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="F_Creacion_Aula.html">
       Creación
     </a>
     <span class="split"></span>
