Mas cambios esteticos

--- a/Prueba1/IntraCampus/index.html
+++ b/Prueba1/IntraCampus/index.html
@@ -73,8 +73,12 @@
     Aenan convallis.
   </div>
   <div class="mdl-card__actions mdl-card--border">
-    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect middle">
-      algo
+        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect middle">
+      Capacitacion Presencial
+    </a>
+    <span class="split"></span>
+        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect middle">
+      Capacitación Virtual
     </a>
   </div>
 </div>
