--- a/Prueba1/IntraCampus/index.html
+++ b/Prueba1/IntraCampus/index.html
@@ -65,9 +65,12 @@
 				<div class="mdl-card__actions mdl-card--border">
 					<a
 						class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect middle">
-						Capacitacion Presencial </a> <span class="split"></span> <a
+						Capacitacion Presencial</a> <span class="split"></span> <a
 						class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect middle">
-						Capacitación Virtual </a>
+						Capacitación Virtual</a>
+						<a
+						class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect middle">
+						Procesamiento</a>
 				</div>
 			</div>
 		</div>
