--- a/Prueba1/IntraCampus/creacion.html
+++ b/Prueba1/IntraCampus/creacion.html
@@ -1,108 +1,113 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Intra UNLa</title>
-<link rel="stylesheet"
+<HTML>
+<HEAD>
+<META charset="ISO-8859-1">
+<TITLE>Intra Campus</TITLE>
+<LINK rel="stylesheet"
 	href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet"
+<LINK rel="stylesheet"
 	href="https://code.getmdl.io/1.1.3/material.blue-purple.min.css" />
-<link rel="stylesheet" href="own.css" />
-<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-</head>
-<body>
-	<div
+<LINK rel="stylesheet" href="own.css" />
+<SCRIPT defer src="https://code.getmdl.io/1.1.3/material.min.js"
+	type="text/javascript"></SCRIPT>
+</HEAD>
+<BODY>
+	<DIV
 		class="mdl-layout mdl-js-layout mdl-layout--fixed-header
             mdl-layout--fixed-tabs mdl-layout--fixed-drawer">
-		<header class="mdl-layout__header">
-		<!-- Title -->
-			<div class="mdl-layout__header-row">
+		<HEADER class="mdl-layout__header">
+			<!-- Title -->
+			<DIV class="mdl-layout__header-row">
 				<!-- <span class="mdl-layout-title"></span> -->
-				<img src="../IntraCampus/i/logo-corto.png">
-			</div>
+				<IMG src="../IntraCampus/i/logo-corto.png" alt="">
+			</DIV>
 
 			<!-- Tabs -->
-			<div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-				<a href="#fixed-tab-1" class="mdl-layout__tab is-active">Creación</a>
-				<a href="#fixed-tab-2" class="mdl-layout__tab">Modificación</a> <a
-					href="#fixed-tab-3" class="mdl-layout__tab">Baja</a>
-			</div>
-		</header>
-		<div class="mdl-layout__drawer">
-			<span class="mdl-layout-title">INTRA CAMPUS</span>
-			<nav class="mdl-navigation">
-				<a class="mdl-navigation__link" href=""><img class="nv--img--small" src="../IntraCampus/i/usuarios.png">Usuarios</a> 
-				<a class="mdl-navigation__link" href=""><img class="nv--img--small" src="../IntraCampus/i/aulas.png">Aulas</a> 
-				<a class="mdl-navigation__link" href=""><img class="nv--img--small" src="../IntraCampus/i/capacitaciones.png">Capacitaciones</a>
-			</nav>
-		</div>
-		<main class="mdl-layout__content">
-		<section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
-			<div class="page-content">
-				<div class="mdl-grid">
-					<div class="mdl-cell mdl-cell--1-col"></div>
-					<div class="mdl-cell mdl-cell--10-col">
-						<h3>Solicitud de Creación de Aula Virtual</h3>
-						<p>Para: Dirección del Campus Virtual UNLa</p>
-						<form action="#">
-							<div
+			<DIV class="mdl-layout__tab-bar mdl-js-ripple-effect">
+				<A href="#fixed-tab-1" class="mdl-layout__tab is-active">Creación</A>
+				<A href="#fixed-tab-2" class="mdl-layout__tab">Modificación</A> <A
+					href="#fixed-tab-3" class="mdl-layout__tab">Baja</A>
+			</DIV>
+		</HEADER>
+		<DIV class="mdl-layout__drawer">
+			<SPAN class="mdl-layout-title">INTRA CAMPUS</SPAN>
+			<NAV class="mdl-navigation">
+				<A class="mdl-navigation__link" href=""><IMG
+					class="nv--img--small" src="../IntraCampus/i/usuarios.png" alt="">Usuarios</A>
+				<A class="mdl-navigation__link" href=""><IMG
+					class="nv--img--small" src="../IntraCampus/i/aulas.png" alt="">Aulas</A>
+				<A class="mdl-navigation__link" href=""><IMG
+					class="nv--img--small" src="../IntraCampus/i/capacitaciones.png"
+					alt="">Capacitaciones</A>
+			</NAV>
+		</DIV>
+		<MAIN class="mdl-layout__content">
+		<SECTION class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
+			<DIV class="page-content">
+				<DIV class="mdl-grid">
+					<DIV class="mdl-cell mdl-cell--1-col"></DIV>
+					<DIV class="mdl-cell mdl-cell--10-col">
+						<H3>Solicitud de Creación de Aula Virtual</H3>
+						<P>Para: Dirección del Campus Virtual UNLa</P>
+						<FORM action="#">
+							<DIV
 								class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-								<input class="mdl-textfield__input" type="text" id="sample3">
-								<label class="mdl-textfield__label" for="sample3">Director
-									de la carrera solicitante</label>
-							</div>
-							<span class="split"></span>
-							<div
+								<INPUT class="mdl-textfield__input" type="text" id="sample3">
+								<LABEL class="mdl-textfield__label" for="sample3">Director
+									de la carrera solicitante</LABEL>
+							</DIV>
+							<SPAN class="split"></SPAN>
+							<DIV
 								class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-								<input class="mdl-textfield__input" type="text" id="sample3">
-								<label class="mdl-textfield__label" for="sample3">Nombre
-									del aula</label>
-							</div>
-							<span class="split"></span>
-							<h5>Departamento</h5>
-							<ul class="demo-list-control mdl-list">
-								<li class="mdl-list__item"><label
+								<INPUT class="mdl-textfield__input" type="text" id="sample3">
+								<LABEL class="mdl-textfield__label" for="sample3">Nombre
+									del aula</LABEL>
+							</DIV>
+							<SPAN class="split"></SPAN>
+							<H5>Departamento</H5>
+							<UL class="demo-list-control mdl-list">
+								<LI class="mdl-list__item"><LABEL
 									class="mdl-radio mdl-js-radio mdl-js-ripple-effect"
-									for="option-1"> <input type="radio" id="option-1"
+									for="option-1"> <INPUT type="radio" id="option-1"
 										class="mdl-radio__button" name="options" value="1" checked>
-										<span class="mdl-radio__label">Desarrollo Productivo y
-											Tecnológico</span>
-								</label></li>
-								<li class="mdl-list__item"><label
+										<SPAN class="mdl-radio__label">Desarrollo Productivo y
+											Tecnológico</SPAN>
+								</LABEL></LI>
+								<LI class="mdl-list__item"><LABEL
 									class="mdl-radio mdl-js-radio mdl-js-ripple-effect"
-									for="option-2"> <input type="radio" id="option-2"
-										class="mdl-radio__button" name="options" value="2"> <span
-										class="mdl-radio__label">Politicas Publicas</span>
-								</label></li>
-								<li class="mdl-list__item"><label
+									for="option-2"> <INPUT type="radio" id="option-2"
+										class="mdl-radio__button" name="options" value="2"> <SPAN
+										class="mdl-radio__label">Politicas Publicas</SPAN>
+								</LABEL></LI>
+								<LI class="mdl-list__item"><LABEL
 									class="mdl-radio mdl-js-radio mdl-js-ripple-effect"
-									for="option-3"> <input type="radio" id="option-3"
-										class="mdl-radio__button" name="options" value="3"> <span
-										class="mdl-radio__label">Salud Comunitaria</span>
-								</label></li>
-								<li class="mdl-list__item"><label
+									for="option-3"> <INPUT type="radio" id="option-3"
+										class="mdl-radio__button" name="options" value="3"> <SPAN
+										class="mdl-radio__label">Salud Comunitaria</SPAN>
+								</LABEL></LI>
+								<LI class="mdl-list__item"><LABEL
 									class="mdl-radio mdl-js-radio mdl-js-ripple-effect"
-									for="option-4"> <input type="radio" id="option-4"
-										class="mdl-radio__button" name="options" value="4"> <span
-										class="mdl-radio__label">Humanidades y Artes</span>
-								</label></li>
-							</ul>
-							<button
+									for="option-4"> <INPUT type="radio" id="option-4"
+										class="mdl-radio__button" name="options" value="4"> <SPAN
+										class="mdl-radio__label">Humanidades y Artes</SPAN>
+								</LABEL></LI>
+							</UL>
+							<BUTTON
 								class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-								ENVIAR</button>
-						</form>
-					</div>
-					<div class="mdl-cell mdl-cell--1-col"></div>
-				</div>
-			</div>
-		</section>
-		<section class="mdl-layout__tab-panel" id="fixed-tab-2">
-			<div class="page-content">Que miras</div>
-		</section>
-		<section class="mdl-layout__tab-panel" id="fixed-tab-3">
-			<div class="page-content">Gato</div>
-		</section>
-		</main>
-	</div>
-</body>
-</html>
+								ENVIAR</BUTTON>
+						</FORM>
+					</DIV>
+					<DIV class="mdl-cell mdl-cell--1-col"></DIV>
+				</DIV>
+			</DIV>
+		</SECTION>
+		<SECTION class="mdl-layout__tab-panel" id="fixed-tab-2">
+			<DIV class="page-content">Que miras</DIV>
+		</SECTION>
+		<SECTION class="mdl-layout__tab-panel" id="fixed-tab-3">
+			<DIV class="page-content">Gato</DIV>
+		</SECTION>
+		</MAIN>
+	</DIV>
+</BODY>
+</HTML>
