Modificaciones en los headers

--- a/Prueba1/IntraCampus/creacion.html
+++ b/Prueba1/IntraCampus/creacion.html
@@ -14,7 +14,7 @@
 <BODY>
 	<DIV
 		class="mdl-layout mdl-js-layout mdl-layout--fixed-header
-            mdl-layout--fixed-tabs mdl-layout--fixed-drawer">
+            mdl-layout--fixed-tabs mdl-layout--fixed-drawer creacion">
 		<HEADER class="mdl-layout__header">
 			<!-- Title -->
 			<DIV class="mdl-layout__header-row">
@@ -102,10 +102,10 @@
 			</DIV>
 		</SECTION>
 		<SECTION class="mdl-layout__tab-panel" id="fixed-tab-2">
-			<DIV class="page-content">Que miras</DIV>
+			<DIV class="page-content">EN CONSTRUCCIÓN</DIV>
 		</SECTION>
 		<SECTION class="mdl-layout__tab-panel" id="fixed-tab-3">
-			<DIV class="page-content">Gato</DIV>
+			<DIV class="page-content">EN CONSTRUCCIÓN</DIV>
 		</SECTION>
 		</MAIN>
 	</DIV>
