--- a/Prueba1/GestionCampus/alta-usuario.html
+++ b/Prueba1/GestionCampus/alta-usuario.html
@@ -1,112 +1,110 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Gestión Campus</title>
-<link rel="stylesheet"
+<HTML>
+<HEAD>
+<META charset="ISO-8859-1">
+<TITLE>Gestión Campus</TITLE>
+<LINK rel="stylesheet"
 	href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet"
+<LINK rel="stylesheet"
 	href="https://code.getmdl.io/1.1.3/material.blue-purple.min.css" />
-<link rel="stylesheet" href="own.css" />
-<script defer src="https://code.getmdl.io/1.1.3/material.min.js"
-	type="text/javascript"></script>
-</head>
-<body>
-	<div
+<LINK rel="stylesheet" href="own.css" />
+<SCRIPT defer src="https://code.getmdl.io/1.1.3/material.min.js"
+	type="text/javascript"></SCRIPT>
+</HEAD>
+<BODY>
+	<DIV
 		class="mdl-layout mdl-js-layout mdl-layout--fixed-header
             mdl-layout--fixed-tabs mdl-layout--fixed-drawer alta-usuario">
-		<header class="mdl-layout__header">
+		<HEADER class="mdl-layout__header">
 			<!-- Title -->
-			<div class="mdl-layout__header-row">
+			<DIV class="mdl-layout__header-row">
 				<!-- <span class="mdl-layout-title"></span> -->
-				<img src="../GestionCampus/i/logo-corto-blanco.png" alt="">
-			</div>
+				<IMG src="../GestionCampus/i/logo-corto-blanco.png" alt="">
+			</DIV>
 
 			<!-- Tabs -->
-			<div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-				<a href="#fixed-tab-1" class="mdl-layout__tab is-active">Alta</a> <a
-					href="#fixed-tab-2" class="mdl-layout__tab">Matriculación</a><a
-					href="#fixed-tab-3" class="mdl-layout__tab">Modificación</a>
-			</div>
-		</header>
-		<div class="mdl-layout__drawer">
-			<span class="mdl-layout-title">GESTIÓN CAMPUS</span>
-			<nav class="mdl-navigation">
-				<a class="mdl-navigation__link" href="alta-usuario.html"><img
-					class="nv--img--small" src="../GestionCampus/i/usuarios.png" alt="">Usuarios</a>
-				<a class="mdl-navigation__link" href="aula-creacion.html"><img
-					class="nv--img--small" src="../GestionCampus/i/aulas.png" alt="">Aulas</a>
-				<a class="mdl-navigation__link" href="precencial.html"><img
+			<DIV class="mdl-layout__tab-bar mdl-js-ripple-effect">
+				<A href="#fixed-tab-1" class="mdl-layout__tab is-active">Alta</A> <A
+					href="#fixed-tab-2" class="mdl-layout__tab">Matriculación</A><A
+					href="#fixed-tab-3" class="mdl-layout__tab">Modificación</A>
+			</DIV>
+		</HEADER>
+		<DIV class="mdl-layout__drawer">
+			<SPAN class="mdl-layout-title">GESTIÓN CAMPUS</SPAN>
+			<NAV class="mdl-navigation">
+				<A class="mdl-navigation__link" href="alta-usuario.html"><IMG
+					class="nv--img--small" src="../GestionCampus/i/usuarios.png" alt="">Usuarios</A>
+				<A class="mdl-navigation__link" href="aula-creacion.html"><IMG
+					class="nv--img--small" src="../GestionCampus/i/aulas.png" alt="">Aulas</A>
+				<A class="mdl-navigation__link" href="precencial.html"><IMG
 					class="nv--img--small" src="../GestionCampus/i/capacitaciones.png"
-					alt="">Capacitaciones</a>
-			</nav>
-		</div>
-		<main class="mdl-layout__content">
-		<section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
-			<div class="page-content">
-				<div class="mdl-grid">
-					<div class="mdl-cell mdl-cell--1-col"></div>
-					<div class="mdl-cell mdl-cell--10-col">
-						<h3>Solicitud de Matriculación de Usuarios</h3>
-						<span class="spacer"></span>
-						<div class="llamado">
-							Guía:<br />Por favor siga las recomendaciones mostradas mas abajo
-						</div>
-						<span class="spacer"></span>
-						<div class="mdl-grid">
-							<div class="mdl-cell mdl-cell--10-col">
-								<img src="../GestionCampus/i/guia-transparente.png" alt=""
-									class="img-guia"> <span class="spacer"></span>
-							</div>
-							<div class="mdl-cell mdl-cell--2-col"></div>
-							<div class="mdl-cell mdl-cell--5-col">
-								<div class="demo-card-square mdl-card mdl-shadow--2dp">
-									<div class="mdl-card__title mdl-card--expand">
-										<h2 class="mdl-card__title-text">Descargar</h2>
-									</div>
-									<div class="mdl-card__supporting-text">Si lo necesita, aquí usted puede
-										obtener la planilla de Excel que debe completar</div>
-									<div class="mdl-card__actions mdl-card--border">
-										<div id="tt1" class="icon material-icons">cloud_download</div>
-										<div class="mdl-tooltip mdl-tooltip--right" for="tt1">
-											<strong>Bajar archivo.xlsx</strong>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="mdl-cell mdl-cell--5-col">
-								<div class="demo-card-square mdl-card mdl-shadow--2dp">
-									<div class="mdl-card__title mdl-card--expand">
-										<h2 class="mdl-card__title-text">Subir</h2>
-									</div>
-									<div class="mdl-card__supporting-text">Aquí usted debe
-										subir su archivo Excel con la lista de alumnos a matricular</div>
-									<div class="mdl-card__actions mdl-card--border">
-										<div id="tt2" class="icon material-icons">cloud_upload</div>
-										<div class="mdl-tooltip mdl-tooltip--right" for="tt2">
-											<strong> Subir archivo.xlsx</strong>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="mdl-cell mdl-cell--2-col"></div>
-						</div>
-						<span class="spacer"></span>
-						<button
+					alt="">Capacitaciones</A>
+			</NAV>
+		</DIV>
+		<MAIN class="mdl-layout__content">
+		<SECTION class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
+			<DIV class="page-content">
+				<DIV class="mdl-grid">
+					<DIV class="mdl-cell mdl-cell--1-col"></DIV>
+					<DIV class="mdl-cell mdl-cell--10-col">
+						<H3>Solicitud de Matriculación de Usuarios</H3>
+						<SPAN class="spacer"></SPAN>
+						<DIV class="info-llamado">
+							Guía:<BR />Por favor siga las recomendaciones mostradas mas
+							abajo
+						</DIV>
+						<SPAN class="spacer"></SPAN> <IMG
+							src="../GestionCampus/i/guia-transparente.png" alt=""
+							class="img-guia"> <SPAN class="spacer"></SPAN>
+						<DIV class="mdl-grid">
+							<DIV class="mdl-cell mdl-cell--6-col">
+								<DIV class="demo-card-square mdl-card mdl-shadow--2dp">
+									<DIV class="mdl-card__title mdl-card--expand">
+										<H2 class="mdl-card__title-text">Descargar</H2>
+									</DIV>
+									<DIV class="mdl-card__supporting-text">Si lo necesita,
+										aquí usted puede obtener la planilla de Excel que debe
+										completar</DIV>
+									<DIV class="mdl-card__actions mdl-card--border">
+										<DIV id="tt1" class="icon material-icons">cloud_download</DIV>
+										<DIV class="mdl-tooltip mdl-tooltip--right" for="tt1">
+											<STRONG>Bajar archivo.xlsx</STRONG>
+										</DIV>
+									</DIV>
+								</DIV>
+							</DIV>
+							<DIV class="mdl-cell mdl-cell--6-col">
+								<DIV class="demo-card-square mdl-card mdl-shadow--2dp">
+									<DIV class="mdl-card__title mdl-card--expand">
+										<H2 class="mdl-card__title-text">Subir</H2>
+									</DIV>
+									<DIV class="mdl-card__supporting-text">Aquí usted debe
+										subir su archivo Excel con la lista de alumnos a matricular</DIV>
+									<DIV class="mdl-card__actions mdl-card--border">
+										<DIV id="tt2" class="icon material-icons">cloud_upload</DIV>
+										<DIV class="mdl-tooltip mdl-tooltip--right" for="tt2">
+											<STRONG> Subir archivo.xlsx</STRONG>
+										</DIV>
+									</DIV>
+								</DIV>
+							</DIV>
+						</DIV>
+						<SPAN class="spacer"></SPAN>
+						<BUTTON
 							class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-							ENVIAR</button>
-					</div>
-					<div class="mdl-cell mdl-cell--1-col"></div>
-				</div>
-			</div>
-		</section>
-		<section class="mdl-layout__tab-panel" id="fixed-tab-2">
-			<div class="page-content">EN CONSTRUCCIÓN</div>
-		</section>
-		<section class="mdl-layout__tab-panel" id="fixed-tab-3">
-			<div class="page-content">EN CONSTRUCCIÓN</div>
-		</section>
-		</main>
-	</div>
-</body>
-</html>
+							ENVIAR</BUTTON>
+					</DIV>
+					<DIV class="mdl-cell mdl-cell--1-col"></DIV>
+				</DIV>
+			</DIV>
+		</SECTION>
+		<SECTION class="mdl-layout__tab-panel" id="fixed-tab-2">
+			<DIV class="page-content">EN CONSTRUCCIÓN</DIV>
+		</SECTION>
+		<SECTION class="mdl-layout__tab-panel" id="fixed-tab-3">
+			<DIV class="page-content">EN CONSTRUCCIÓN</DIV>
+		</SECTION>
+		</MAIN>
+	</DIV>
+</BODY>
+</HTML>
