--- a/Prueba1/alta-usuario.html
+++ b/Prueba1/alta-usuario.html
@@ -19,7 +19,7 @@
 			<!-- Title -->
 			<DIV class="mdl-layout__header-row">
 				<!-- <span class="mdl-layout-title"></span> -->
-				<IMG src="../GestionCampus/i/logo-corto-blanco.png" alt="">
+				<IMG src="../i/logo-corto-blanco.png" alt="">
 			</DIV>
 
 			<!-- Tabs -->
@@ -33,11 +33,11 @@
 			<SPAN class="mdl-layout-title">GESTIÓN CAMPUS</SPAN>
 			<NAV class="mdl-navigation">
 				<A class="mdl-navigation__link" href="alta-usuario.html"><IMG
-					class="nv--img--small" src="../GestionCampus/i/usuarios.png" alt="">Usuarios</A>
+					class="nv--img--small" src="../i/usuarios.png" alt="">Usuarios</A>
 				<A class="mdl-navigation__link" href="aula-creacion.html"><IMG
-					class="nv--img--small" src="../GestionCampus/i/aulas.png" alt="">Aulas</A>
+					class="nv--img--small" src="../i/aulas.png" alt="">Aulas</A>
 				<A class="mdl-navigation__link" href="precencial.html"><IMG
-					class="nv--img--small" src="../GestionCampus/i/capacitaciones.png"
+					class="nv--img--small" src="../i/capacitaciones.png"
 					alt="">Capacitaciones</A>
 			</NAV>
 		</DIV>
@@ -54,7 +54,7 @@
 							abajo
 						</DIV>
 						<SPAN class="spacer"></SPAN> <IMG
-							src="../GestionCampus/i/guia-transparente.png" alt=""
+							src="../i/guia-transparente.png" alt=""
 							class="img-guia"> <SPAN class="spacer"></SPAN>
 						<DIV class="mdl-grid">
 							<DIV class="mdl-cell mdl-cell--6-col">
