--- a/Prueba1/index.html
+++ b/Prueba1/index.html
@@ -15,7 +15,7 @@
 	<DIV class="mdl-layout mdl-js-layout mdl-layout--fixed-header index">
 		<HEADER class="mdl-layout__header">
 				 <IMG
-					src="../i/logo-corto.png"
+					src="../Prueba1/i/logo-corto.png"
 					alt="">
 		</HEADER>
 		<MAIN class="mdl-layout__content">
