--- a/Prueba1/index.html
+++ b/Prueba1/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <META charset="ISO-8859-1">
-<TITLE>Gestión Campus 2</TITLE>
+<TITLE>Gestión Campus</TITLE>
 <LINK rel="stylesheet"
 	href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <LINK rel="stylesheet"
