--- a/Prueba1/alta-usuario.html
+++ b/Prueba1/alta-usuario.html
@@ -30,7 +30,7 @@
 			</DIV>
 		</HEADER>
 		<DIV class="mdl-layout__drawer">
-			<SPAN class="mdl-layout-title">GESTIÓN CAMPUS</SPAN>
+			<a href="index.html" class="mdl-layout-title">GESTIÓN CAMPUS</a>
 			<NAV class="mdl-navigation">
 				<A class="mdl-navigation__link" href="alta-usuario.html"><IMG
 					class="nv--img--small" src="../Prueba1/i/usuarios.png" alt="">Usuarios</A>
