--- a/Prueba1/index.html
+++ b/Prueba1/index.html
@@ -23,7 +23,7 @@
 			<DIV class="mdl-cell mdl-cell--4-col">
 				<DIV class="demo-card-square mdl-card mdl-shadow--2dp right">
 					<DIV class="mdl-card__title mdl-card--expand usuarios">
-						<H2 class="mdl-card__title-text">Usuarioshola</H2>
+						<H2 class="mdl-card__title-text">Usuarfdfdfdifsdfsdfsdfsdfoshola</H2>
 					</DIV>
 					<DIV class="mdl-card__supporting-text">Lorem ipsum dolor sit
 						amet, consectetur adipiscing elit. Aenan convallis.</DIV>
@@ -36,6 +36,7 @@
 							class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Modificación
 						</A>
 					</DIV>
+					</DIV></DIV>
 				</DIV>
 			</DIV>
 			<DIV class="mdl-cell mdl-cell--4-col">
